Added normalize.css; started custom styles; added spans to the text titles.

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -7,6 +7,15 @@
     <title>demo1</title>
 </head>
 <body>
-    <script src = "js/treemap.js"></script>
+    <div id="page">
+        <section id="header">
+            <div>
+                <h1>Migrants Files: The Money Trail</h1>
+            </div>
+        </header>
+        <section id="main">
+            <script src = "js/treemap.js"></script>
+        </section>
+    </div><!-- /#page -->
 </body>
 </html>
