--- a/demo1/index.html
+++ b/demo1/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <script src = "node_modules/d3/d3.js"></script>
+    <script src = "js/marked.js"></script>
     <link rel="stylesheet" href="css/style.css"/>
     <title>demo1</title>
 </head>
