--- a/demo1/index.html
+++ b/demo1/index.html
@@ -13,7 +13,7 @@
             <div>
                 <h1>Migrants Files: The Money Trail</h1>
             </div>
-        </header>
+        </section>
         <section id="main">
             <script src = "js/treemap.js"></script>
         </section>
