Testing fonts and colour scheme; positioning boxes.

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -23,7 +23,8 @@
     <script src = "js/jquery-2.1.4.min.js"></script>
     <script src = "js/tipso.min.js"></script>
     <script>
-        $('.tipso').tipso();
+        jQuery('.tipso').tipso({
+        });
     </script>
 </body>
 </html>
