Added input box to filter results.

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -16,6 +16,9 @@
             </div>
         </section>
         <section id="main">
+            <div id="nav">
+                <p><input id="filters" type="text" placeholder="Filter by tag..."></p>
+            </div>
             <script src = "js/treemap.js"></script>
         </section>
     </div><!-- /#page -->
