--- a/demo1/index.html
+++ b/demo1/index.html
@@ -17,7 +17,7 @@
     <div id="page">
         <section id="header">
             <div>
-                <h1>Migrants Files: The Money Trail</h1>
+                <h1>Migrants Files: <em>The Money Trail</em></h1>
             </div>
         </section>
         <section id="main">
