--- a/demo1/index.html
+++ b/demo1/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>demo1</title>
-   
+
     <link href="media/favicon.ico" rel="shortcut icon" />
     <meta property="og:image" content="" />
     <meta property="og:description" content="" />
 
-    <link rel="stylesheet" href="css/jquery-ui-smoothness.css">    
+    <link rel="stylesheet" href="css/jquery-ui-smoothness.css">
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    
-    <script src="js/vendor/modernizr.js"></script>
-    <script src = "js/jquery-2.1.4.min.js"></script>
+
+    <script src="js/foundation.js"></script>
+    <script src="js/foundation.reveal.js"></script>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/marked.js"></script>
+    <script src="js/tagbox.js"></script>
     <script src="js/vendor/fastclick.js"></script>
-    <script src = "js/foundation.js"></script>
-    <script src = "js/foundation.reveal.js"></script>
-    <script src = "node_modules/d3/d3.js"></script>
-    <script src = "js/marked.js"></script>
     <script src="js/vendor/jquery-ui.js"></script>
-    <script src = "js/tagbox.js"></script>
+    <script src="js/vendor/modernizr.js"></script>
+    <script src="js/vendor/d3.js"></script>
 </head>
 <body>
     <div id="page">
@@ -34,8 +34,8 @@
             <div id="nav">
                 <p><input id="filters" type="text" placeholder="Filter by tag..."></p>
             </div>
-            <script src = "js/treemap.js"></script>
-            
+            <script src="js/treemap.js"></script>
+
             <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <p>&nbsp;</p>
             </div>
