--- a/demo1/index.html
+++ b/demo1/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>demo1</title>
+    <title>The Migrants Files: The Money Trail</title>
 
     <link href="media/favicon.ico" rel="shortcut icon" />
     <meta property="og:image" content="" />
@@ -27,7 +27,7 @@
     <div id="page">
         <section id="header">
             <div>
-                <h1>Migrants Files: <em>The Money Trail</em></h1>
+                <h1>The Migrants Files: <em>The Money Trail</em></h1>
             </div>
         </section>
         <section id="main">
