--- a/demo1/index.html
+++ b/demo1/index.html
@@ -22,6 +22,7 @@
     <script src="js/vendor/jquery-ui.js"></script>
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/d3.js"></script>
+    <script src="js/vendor/humanize.js"></script>
 </head>
 <body>
     <div id="page">
