Comment out tag search

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -32,9 +32,11 @@
             </div>
         </section>
         <section id="main">
+          <!-- Removed for now
             <div id="nav">
                 <p><input id="filters" type="text" placeholder="Filter by tag..."></p>
             </div>
+          -->
             <script src="js/treemap.js"></script>
 
             <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
