--- a/demo1/index.html
+++ b/demo1/index.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="" />
     <meta property="og:description" content="" />
 
-    <link rel="stylesheet" href="css/jquery-ui-smoothness.css">
+    <!-- <link rel="stylesheet" href="css/jquery-ui-smoothness.css"> -->
     <link rel="stylesheet" href="css/foundation.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
 
@@ -19,7 +19,7 @@
     <script src="js/marked.js"></script>
     <script src="js/tagbox.js"></script>
     <script src="js/vendor/fastclick.js"></script>
-    <script src="js/vendor/jquery-ui.js"></script>
+    <!-- <script src="js/vendor/jquery-ui.js"></script> -->
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/d3.js"></script>
     <script src="js/vendor/humanize.js"></script>
