--- a/demo1/index.html
+++ b/demo1/index.html
@@ -17,7 +17,7 @@
     <script src="js/foundation.js"></script>
     <script src="js/foundation.reveal.js"></script>
     <script src="js/marked.js"></script>
-    <script src="js/tagbox.js"></script>
+    <!-- <script src="js/tagbox.js"></script> -->
     <script src="js/vendor/fastclick.js"></script>
     <!-- <script src="js/vendor/jquery-ui.js"></script> -->
     <script src="js/vendor/modernizr.js"></script>
