--- a/demo1/index.html
+++ b/demo1/index.html
@@ -46,6 +46,11 @@
     </div><!-- /#page -->
 
     <script> $(document).foundation(); </script>
+    
+    <script src="js/pym.min.js"></script>
+    <script>
+        var pymChild = new pym.Child();
+    </script>
 
 </body>
 </html>
