Aligned subnodes titles to bottom left; added pym to treemap.js; added lateral padding to page.

--- a/demo1/iframe.html
+++ b/demo1/iframe.html
@@ -6,7 +6,7 @@
         <title>The Migrants Files: The Money Trail</title>
 
     </head>
-    <body>
+    <body style="background: #ddd; width: 700px; margin: 0 auto;">
         <p>Test</p>
         <div id="mf-moneytrail">
         </div>
