Added placeholder for credits.

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,9 @@
                 <p>&nbsp;</p>
             </div>
         </section>
+        <footer id="credits">
+            <p><a href="">Placeholder credits</a></p>
+        </footer>
     </div><!-- /#page -->
 
     <script> $(document).foundation(); </script>
