--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <div id="page">
         <section id="header">
             <div>
-                <h1>The Migrants Files: <em>The Money Trail</em></h1>
+                <h1 id="title">The Migrants Files: <em>The Money Trail</em></h1>
             </div>
         </section>
         <section id="main">
