--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
         <section id="main">
             <script src="js/treemap.js"></script>
 
-            <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+            <div id="myModal" class="reveal-modal small" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
                 <p>&nbsp;</p>
             </div>
         </section>
