Added modal for credits with dummy text. Debugging pym.js...

--- a/app/iframe.html
+++ b/app/iframe.html
@@ -6,17 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
         <title>The Migrants Files: The Money Trail</title>
         
-        <style type="text/css">
+        <!--<style type="text/css">
          body { background: #ddd; margin: 0 auto; }
          #mf-moneytrail { width: 100%; }
-        </style>
+        </style>-->
 
     </head>
     <body>
         <p>Test</p>
         <div id="mf-moneytrail"></div>
         
-        <script type="text/javascript" src="js/pym.min.js"></script>
+        <script src="js/pym.min.js"></script>
         <script>
             var pymParent = new pym.Parent('mf-moneytrail', 'index.html', {});
         </script>
