Fixed jquery mistake.

--- a/app/index.html
+++ b/app/index.html
@@ -45,8 +45,7 @@
 
     <script src="js/pym.min.js"></script>
     <script>
-        jQuery.noConflict();
-        jQuery(document).foundation();
+        $(document).foundation();
     </script>
     
 
