Updated modals styles. Styled links.

--- a/app/index.html
+++ b/app/index.html
@@ -32,18 +32,19 @@
             <script src="js/treemap.js"></script>
         </section>
         <footer id="credits">
-            <p><a href="#" data-toggle="modal" data-target="#credits-modal">Placeholder credits</a></p>  
+            <p><a href="#" data-toggle="modal" data-target="#credits-modal">Credits</a></p>  
             
             <!-- Modal aria-labelledby is there to reference the modal title -->
             <div id="credits-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="credits-modal-label" aria-hidden="true">
-                <div class="modal-dialog modal-sm">
+                <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                             <h2 class="modal-title" id="credits-modal-label">The Migrants Files: <em>The Money Trail</em></h2>
                         </div><!-- /.modal-header -->
                         <div class="modal-body">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sollicitudin felis eu purus facilisis fermentum eu sed ipsum. Aenean sed leo tempus, sagittis sem consequat, elementum erat. Integer accumsan arcu congue lacinia malesuada. Aliquam in ipsum libero. Curabitur venenatis urna id massa lobortis ornare. In elementum ipsum at purus hendrerit, vitae interdum nunc viverra. Nulla aliquet purus quis metus sodales tincidunt. Phasellus eu quam sit amet neque gravida convallis. Fusce tempor venenatis lacus ac varius. Donec a nisi purus. Donec ultricies dolor nunc, vitae malesuada sapien bibendum vitae. Mauris lobortis lectus dui, quis rutrum orci mollis non. Maecenas at faucibus libero. Nunc lobortis mauris eget risus commodo convallis. Donec nec venenatis turpis, eget rutrum sapien.</p>
+                            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing</a> elit. Etiam sollicitudin felis eu purus facilisis fermentum eu sed ipsum. Aenean sed leo tempus, sagittis sem consequat, elementum erat. Integer accumsan arcu congue lacinia malesuada. Aliquam in ipsum libero. Curabitur venenatis urna id massa lobortis ornare. In elementum ipsum at purus hendrerit, vitae interdum nunc viverra.</p>
+                            <p>Nulla aliquet purus quis metus sodales tincidunt. Phasellus eu quam sit amet neque gravida convallis. Fusce tempor venenatis lacus ac varius. Donec a nisi purus. Donec ultricies dolor nunc, vitae malesuada sapien bibendum vitae. Mauris lobortis lectus dui, quis rutrum orci mollis non. Maecenas at faucibus libero. Nunc lobortis mauris eget risus commodo convallis. Donec nec venenatis turpis, eget rutrum sapien.</p>
                         </div><!-- /.modal-body -->
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
