Added text in the About

--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,8 @@
                             <h2 class="modal-title" id="credits-modal-label">The Migrants Files: <em>The Money Trail</em></h2>
                         </div><!-- /.modal-header -->
                         <div class="modal-body">
-                            <p>Lorem ipsum dolor sit amet, <a href="">consectetur adipiscing</a> elit. Etiam sollicitudin felis eu purus facilisis fermentum eu sed ipsum. Aenean sed leo tempus, sagittis sem consequat, elementum erat. Integer accumsan arcu congue lacinia malesuada. Aliquam in ipsum libero. Curabitur venenatis urna id massa lobortis ornare. In elementum ipsum at purus hendrerit, vitae interdum nunc viverra.</p>
-                            <p>Nulla aliquet purus quis metus sodales tincidunt. Phasellus eu quam sit amet neque gravida convallis. Fusce tempor venenatis lacus ac varius. Donec a nisi purus. Donec ultricies dolor nunc, vitae malesuada sapien bibendum vitae. Mauris lobortis lectus dui, quis rutrum orci mollis non. Maecenas at faucibus libero. Nunc lobortis mauris eget risus commodo convallis. Donec nec venenatis turpis, eget rutrum sapien.</p>
+                            <p>This visualization is part of The Migrants Files, a pan-European journalism project. Find out more at <a href="themigrantsfiles.com">themigrantsfiles.com</a>. You can read more about <a href="https://github.com/jplusplus/themigrantsfiles.com/wiki/TMF-Money-Trails:-Methodology">the methodology behind these figures at this page</a>.</p>
+                            <p><img src="https://www.easa.europa.eu/sites/all/themes/easa_theme/images/eu_flag_small.png">This visualization has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 645833.</p>
                         </div><!-- /.modal-body -->
                     </div><!-- /.modal-content -->
                 </div><!-- /.modal-dialog -->
