Commented unused js scripts.

--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,10 @@
     <script src="js/bootstrap-modal.js"></script>
 <!--<script src="js/foundation.reveal.js"></script>-->
     <script src="js/marked.js"></script>
-    <script src="js/vendor/fastclick.js"></script>
-    <script src="js/vendor/modernizr.js"></script>
+<!--<script src="js/vendor/fastclick.js"></script>-->
+<!--<script src="js/vendor/modernizr.js"></script>-->
     <script src="js/vendor/d3.js"></script>
-    <script src="js/vendor/humanize.js"></script>
+<!--<script src="js/vendor/humanize.js"></script>-->
 </head>
 <body>
     <div id="page">
