--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
             <script src="js/treemap.js"></script>
         </section>
         <footer id="credits">
-            <p><a href="#" data-toggle="modal" data-target="#credits-modal">Credits</a></p>  
-            
+            <p><a href="#" data-toggle="modal" data-target="#credits-modal">Credits</a></p>
+
             <!-- Modal aria-labelledby is there to reference the modal title -->
             <div id="credits-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="credits-modal-label" aria-hidden="true">
                 <div class="modal-dialog">
@@ -43,7 +43,7 @@
                             <h2 class="modal-title" id="credits-modal-label">The Migrants Files: <em>The Money Trail</em></h2>
                         </div><!-- /.modal-header -->
                         <div class="modal-body">
-                            <p>This visualization is part of The Migrants Files, a pan-European journalism project. Find out more at <a href="themigrantsfiles.com">themigrantsfiles.com</a>. You can read more about <a href="https://github.com/jplusplus/themigrantsfiles.com/wiki/TMF-Money-Trails:-Methodology">the methodology behind these figures at this page</a>.</p>
+                            <p>This visualization is part of The Migrants Files, a pan-European journalism project. Find out more at <a href="http://themigrantsfiles.com" target="_blank">themigrantsfiles.com</a>. You can read more about <a href="https://github.com/jplusplus/themigrantsfiles.com/wiki/TMF-Money-Trails:-Methodology" target="_blank">the methodology behind these figures at this page</a>.</p>
                             <p><img src="https://www.easa.europa.eu/sites/all/themes/easa_theme/images/eu_flag_small.png">This visualization has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No 645833.</p>
                         </div><!-- /.modal-body -->
                     </div><!-- /.modal-content -->
@@ -53,6 +53,6 @@
     </div><!-- /#page -->
 
     <script src="js/pym.min.js"></script>
-    
+
 </body>
 </html>
